[gd_scene load_steps=7 format=3 uid="uid://bfysoc74v3e17"]

[ext_resource type="PackedScene" uid="uid://chese50emd77q" path="res://Scenes/Interacables/ObjektInteractionNode.tscn" id="1_0qn8r"]
[ext_resource type="Script" path="res://Scenes/Interacables/keller/werkbank.gd" id="1_q6gb4"]
[ext_resource type="Resource" uid="uid://d3mby1ohrvmik" path="res://Scenes/Interacables/keller/schaufel_ready.tres" id="2_5pakk"]
[ext_resource type="Resource" uid="uid://dvrg8tomwdtj8" path="res://Scenes/DialogueNodes/Keller/Werkbank.tres" id="2_b1hx5"]
[ext_resource type="PackedScene" uid="uid://dfhse8cxt4whv" path="res://Scenes/Interacables/interaction.tscn" id="3_ikgkt"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_okmne"]
size = Vector2(47, 11)

[node name="Werkbank" type="Node2D"]
script = ExtResource("1_q6gb4")
itemRes = ExtResource("2_5pakk")

[node name="StaticBody2D" type="StaticBody2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="StaticBody2D"]
position = Vector2(23, 4.5)
shape = SubResource("RectangleShape2D_okmne")

[node name="dialouge3" parent="." instance=ExtResource("1_0qn8r")]
position = Vector2(22.36, -0.1)
scale = Vector2(1.022, 0.54)
textboxName = "dialouge3"
groupName = "Player"
dialogue_data = ExtResource("2_b1hx5")

[node name="Interaction" parent="." instance=ExtResource("3_ikgkt")]
visible = false
position = Vector2(-7, -15)

[node name="dialouge2" parent="." instance=ExtResource("1_0qn8r")]
position = Vector2(22.36, -0.1)
scale = Vector2(1.022, 0.54)
textboxName = "dialouge2"
groupName = "Player"
dialogue_data = ExtResource("2_b1hx5")

[node name="Interaction2" parent="." instance=ExtResource("3_ikgkt")]
visible = false
position = Vector2(78.97, 15)

[node name="dialouge1" parent="." instance=ExtResource("1_0qn8r")]
position = Vector2(22.36, -0.1)
scale = Vector2(1.022, 0.54)
textboxName = "dialouge1"
groupName = "Player"
dialogue_data = ExtResource("2_b1hx5")

[node name="Interaction3" parent="." instance=ExtResource("3_ikgkt")]
visible = false
position = Vector2(-77, 15)

[connection signal="interaction_null" from="dialouge3" to="." method="_on_dialouge_3_interaction_null"]
[connection signal="interaction_true" from="dialouge3" to="." method="_on_object_interaction_collision_2_interaction_true"]
[connection signal="interaction_true" from="dialouge2" to="." method="_on_object_interaction_collision_2_interaction_true"]
[connection signal="interaction_true" from="dialouge1" to="." method="_on_object_interaction_collision_2_interaction_true"]
